# mini-caffe

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.zh.md  appveyor.yml  build.sh  copydeps.bat  generatepb.bat  generatepb.sh  mini-caffe.cmake  profile.md  travis.sh
android/: .gitignore  README.md  build.sh  protobuf-cmake-android-unified-header-fix-build.patch
cmake/: Cuda.cmake
cmake/Modules/: FindNNPACK.cmake
example/: .gitignore  CMakeLists.txt  README.md
example/deeplandmark/: CMakeLists.txt  README.md  landmark.cpp  landmark.hpp  main.cpp
example/deeplandmark/models/: 2_LE2.prototxt  2_LM1.caffemodel  2_LM2.prototxt  2_RM1.caffemodel
example/models/deeplandmark/: 1_F.caffemodel  1_F.prototxt  2_LE1.caffemodel  2_LE1.prototxt  2_LE2.caffemodel  2_LM1.prototxt  2_LM2.caffemodel  2_N1.caffemodel  2_N1.prototxt  2_N2.caffemodel  2_N2.prototxt  2_RE1.caffemodel  2_RE1.prototxt  2_RE2.caffemodel  2_RE2.prototxt  2_RM1.prototxt  2_RM2.caffemodel  2_RM2.prototxt
example/models/r-fcn/: faster-rcnn.prototxt  test_agnostic.prototxt
example/models/ssh/: test_ssh.prototxt
example/models/wgan/: g.prototxt
example/r-fcn/: main.cpp
example/ssd/: main.cpp
example/ssh/: main.cpp
example/wgan/: main.cpp
include/caffe/: base.hpp  blob.hpp  c_api.h  caffe.hpp  common.hpp  common_layers.hpp  data_layers.hpp  dummy.hpp  layer.hpp  layer_factory.hpp  logging.hpp  net.hpp  profiler.hpp  solver.hpp  syncedmem.hpp
java/: .gitignore  Blob.java  Net.java  Utils.java  build.gradle  settings.gradle
misaka/: README.md
python/: .gitignore  README.md  python.cmake  setup.py
python/minicaffe/: __init__.py  base.py  blob.py  craft.py  net.py  profiler.py
python/tests/: test.py
src/: blob.cpp  c_api.cpp  common.cpp  common.hpp  filler.hpp  layer.hpp  layer_factory.cpp  layer_factory.hpp  net.cpp  profiler.cpp  syncedmem.cpp  syncedmem.hpp  thread_local.hpp
src/caffe/: blob.cpp  common.cpp  data_transformer.cpp  filler.hpp  layer.hpp  layer_factory.cpp  layer_factory.hpp  net.cpp  solver.cpp  syncedmem.cpp
src/graph/: graph.cpp
src/jni/: jni.c
src/layers/: absval_layer.cpp  absval_layer.cu  absval_layer.hpp  argmax_layer.cpp  argmax_layer.hpp  base_conv_layer.cpp  base_conv_layer.hpp  batch_norm_layer.cpp  batch_norm_layer.cu  batch_norm_layer.hpp  batch_reindex_layer.cpp  batch_reindex_layer.hpp  bias_layer.cpp  bias_layer.cu  bias_layer.hpp  bn_layer.cpp  bn_layer.cu  bn_layer.hpp  bnll_layer.cpp  bnll_layer.cu  bnll_layer.hpp  concat_layer.cpp  concat_layer.cu  concat_layer.hpp  conv_dw_layer.cpp  conv_dw_layer.cu  conv_dw_layer.hpp  conv_layer.cpp  conv_layer.cu  conv_layer.hpp  crop_layer.cpp  crop_layer.cu  crop_layer.hpp  cudnn_conv_layer.cpp  cudnn_conv_layer.cu  cudnn_conv_layer.hpp  cudnn_lcn_layer.cpp  cudnn_lcn_layer.cu  cudnn_lcn_layer.hpp  cudnn_lrn_layer.cpp  (+129 more)
src/util/: io.cpp  (+18 more)
tests/: run_net.c  run_net.cpp  tests.cmake
tools/: benchmark.cpp  fuse_bn.py  parse_mem.py  tools.cmake
(+198 files in other folders)
